Revise index.html for improved layout and styles
Updated HTML structure and styling for better presentation.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Site 4 - Azure Static Web App</title>
-<style>
-body { font-family:sans-serif; text-align:center; margin-top:80px; }
-.box { width:120px; height:120px; background:#ff4444; animation:move 2s infinite; margin:auto; }
-@keyframes move {
-  0%   {transform:translateX(-50px);}
-  100% {transform:translateX(50px);}
-}
-</style>
+    <meta charset="UTF-8" />
+    <title>Site 4 - Azure Static Web App</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 100px;
+        }
+        .box {
+            width: 200px;
+            height: 200px;
+            background-color: #e25555;
+            margin: 40px auto;
+        }
+    </style>
 </head>
 <body>
-<h1>Site 4 – Azure Static Web App</h1>
-<p>This site is deployed from GitHub to Azure.</p>
-<div class="box"></div>
+
+    <h1>Site 4 - Azure Static Web App</h1>
+    <p>This site is deployed from GitHub to Azure.</p>
+
+    <div class="box"></div>
+
 </body>
 </html>
